add website and deploy

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://toledanomartin.github.io/score-swinger",
   "type": "module",
   "scripts": {
     "dev": "vite",
