--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,4 +30,9 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm install
-    - run: npm run deploy
+    - run: npm run predeploy
+    - name: Deploy 🚀
+    uses: JamesIves/github-pages-deploy-action@v4
+    with:
+      folder: build # The folder the action should deploy.
+
