--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,4 +35,6 @@ jobs:
     uses: JamesIves/github-pages-deploy-action@v4
     with:
       folder: build # The folder the action should deploy.
+      git-config-name: pablo
+      git-config-email: pablo@xyz.c
 
